Update function parameters
Signed-off-by: Daena Rys <rysdaena8@gmail.com>

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -618,15 +618,15 @@ sample_meta_file_path <- system.file("extdata", "Mapping_file_ADHD_aggregated.cs
 tree_file_path <- system.file("extdata", "Data_humanization_phylo_aggregation.tre", package = "OMA")
 ```  
 
-Now we can read in the biom file and convert it into a `TreeSE` object. In addition, we retrieve the rank names from the prefixes of the feature names and then remove them with the `rankFromPrefix` and `removeTaxaPrefixes` optional arguments.
+Now we can read in the biom file and convert it into a `TreeSE` object. In addition, we retrieve the rank names from the prefixes of the feature names and then remove them with the `rank.from.prefix` and `taxa.prefix.rm` optional arguments.
 
 ```{r}
 library(mia)
 
 # read biom and convert it to TreeSE
 tse <- importBIOM(biom_file_path,
-                    rankFromPrefix = TRUE,
-                    removeTaxaPrefixes = TRUE)
+                    rank.from.prefix = TRUE,
+                    taxa.prefix.rm = TRUE)
 
 # Check
 tse
@@ -675,12 +675,12 @@ Let us add `colData` from the sample metadata, which is stored in a CSV file.
 
 ```{r}
 # CSV file with colnames in the first row and rownames in the first column
-sample_meta <- read.csv(sample_meta_file_path,
+col.data <- read.csv(sample_meta_file_path,
                         sep = ",", row.names = 1)
 
 # Add this sample data to colData of the taxonomic data object
 # Note that the data must be given in a DataFrame format (required for our purposes)
-colData(tse) <- DataFrame(sample_meta)
+colData(tse) <- DataFrame(col.data)
 ```
 
 Now the `colData` includes the sample metadata.
@@ -767,8 +767,8 @@ tse <- GlobalPatterns
 # Convert into a data.frame 
 tse <- transformAssay(tse, MARGIN = "samples", method="relabundance")
 molten_tse <- meltAssay(tse,
-                        add_row_data = TRUE,
-                        add_col_data = TRUE,
+                        add.row = TRUE,
+                        add.col = TRUE,
                         assay.type = "relabundance")
 # Export as a feather file
 library(feather)
