--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -106,7 +106,7 @@ library(scater)
 plotColData(tse, 
             "observed", 
             "SampleType", 
-            colour_by = "Final_Barcode") +
+            colour.by = "Final_Barcode") +
     theme(axis.text.x = element_text(angle=45,hjust=1)) + 
   labs(expression(Richness[Observed]))
 
@@ -177,7 +177,7 @@ Below, a visual comparison between shannon and faith indices is shown with a vio
 ```{r phylo-div-2}
 plots <- lapply(c("shannon", "faith"),
                 plotColData,
-                object = tse, colour_by = "SampleType")
+                object = tse, colour.by = "SampleType")
 plots[[1]] + plots[[2]] +
   plot_layout(guides = "collect")
 ```
@@ -222,7 +222,7 @@ plots <- lapply(c("observed", "shannon", "faith"),
                 plotColData,
                 object = tse,
                 x = "SampleType",
-                colour_by = "SampleType")
+                colour.by = "SampleType")
 
 # Fine-tune visual appearance
 plots <- lapply(plots, "+", 
