--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -88,7 +88,7 @@ plotRowData(tse, "mean", "Species") +
   theme(axis.text.x = element_blank()) +
   labs(x = "Species", y = "QC Mean")
 # plot QC Sum against Sample ID, colour-labeled by Sample Type
-plotColData(tse, "sum", "X.SampleID", colour_by = "SampleType") +
+plotColData(tse, "sum", "X.SampleID", colour.by = "SampleType") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   labs(x = "Sample ID", y = "QC Sum")
 ```
@@ -158,7 +158,7 @@ tse <- mia::estimateDiversity(tse,
                               index = "shannon", 
                               name = "shannon")
 # plot shannon diversity index, colour-labeled by Sample Type
-plotColData(tse, "shannon", colour_by = "SampleType")
+plotColData(tse, "shannon", colour.by = "SampleType")
 ```
 
 The several indices available for the evaluation of alpha diversity
@@ -216,7 +216,7 @@ tse <- runNMDS(tse,
                name = "NMDS")
 # plot results of a 2-component NMDS on tse,
 # coloured-scaled by shannon diversity index
-plotReducedDim(tse, "NMDS", colour_by = "shannon")
+plotReducedDim(tse, "NMDS", colour.by = "shannon")
 ```
 
 Multiple combinations of coordinates or dimensions can also be integrated into a multi-panel arrangement.
@@ -231,7 +231,7 @@ tse <- runMDS(tse,
               ncomponents = 3)
 # plot results of a 3-component MDS on tse,
 # coloured-scaled by faith diversity index
-plotReducedDim(tse, "MDS", ncomponents = c(1:3), colour_by = "faith")
+plotReducedDim(tse, "MDS", ncomponents = c(1:3), colour.by = "faith")
 ```
 
 Similarly to iterating `plotColData` over indices of alpha diversity,
@@ -245,7 +245,7 @@ coordination methods.
 plots <- lapply(c("MDS", "NMDS"),
                 plotReducedDim,
                 object = tse,
-                colour_by = "shannon")
+                colour.by = "shannon")
 # combine plots with patchwork
 plots[[1]] + plots[[2]] +
   plot_layout(guides = "collect")
@@ -293,8 +293,8 @@ rowData(tse_order)$Order <- as.character(order_renamed)
 plotAbundance(tse_order,
               assay.type = "relabundance",
               rank = "Order",
-              order_rank_by = "abund",
-              order_sample_by = "Clostridiales")
+              order.row.by = "abund",
+              order.col.by = "Clostridiales")
 ```
 
 To add a sample annotation, you can combine plots that you get from the output
@@ -306,8 +306,8 @@ of _plotAbundance_.
 plots <- plotAbundance(tse_order,
       	    assay.type = "relabundance",
 	    rank = "Order",
-            order_rank_by = "abund",
-	    order_sample_by = "Clostridiales",
+            order.row.by = "abund",
+	    order.col.by = "Clostridiales",
             features = "SampleType")
 
 # Modify the legend of the first plot to be smaller 
@@ -349,7 +349,7 @@ feature and sample clusters in a heatmap, along with further functionality.
 # Agglomerate tse by phylum
 tse_phylum <- mergeFeaturesByRank(tse,
                                 rank = "Phylum",
-                                onRankOnly = TRUE)
+                                disable.taxonomy = TRUE)
 
 # Add clr-transformation on samples
 tse_phylum <- transformAssay(tse_phylum, MARGIN = "samples", method = "clr", assay.type = "counts", pseudocount=1)
