--- a/inst/pages/22_communitytyping.Rmd
+++ b/inst/pages/22_communitytyping.Rmd
@@ -132,7 +132,7 @@ tse <- runMDS(tse, assay.type = "clr", method = "euclidean")
 
 ```{r}
 # Create a plot
-euclidean_dmm_plot <- plotReducedDim(tse, "MDS", colour_by = "dmm_component") +
+euclidean_dmm_plot <- plotReducedDim(tse, "MDS", colour.by = "dmm_component") +
     labs(x = "Coordinate 1",
        y = "Coordinate 2",
        title = "PCoA with Aitchison distances") +  
@@ -185,7 +185,7 @@ ClustAndPlot <- function(x) {
   graph_clusters <- clusterRows(t(assays(tse)$rclr), NNGraphParam(k=x))
   
   # Results of the clustering as a color for each sample
-  plotUMAP(tse, colour_by = I(graph_clusters)) +
+  plotUMAP(tse, colour.by = I(graph_clusters)) +
     labs(title = paste0("k = ", x))
 }
 
