--- a/inst/pages/23_multi-assay_analyses.qmd
+++ b/inst/pages/23_multi-assay_analyses.qmd
@@ -114,12 +114,12 @@ correlations <- testExperimentCrossCorrelation(mae,
                                                assay.type1 = "log10", 
                                                assay.type2 = "nmr",
                                                method = "spearman", 
-                                               p_adj_threshold = NULL,
-                                               cor_threshold = NULL,
+                                               p.adj.threshold = NULL,
+                                               cor.threshold = NULL,
                                                # Remove when mia is fixed
                                                mode = "matrix",
                                                sort = TRUE,
-                                               show_warnings = FALSE)
+                                               show.warnings = FALSE)
 ```
 
 Next, we create a heatmap depicting all cross-correlations between bacterial
@@ -172,7 +172,7 @@ we transform our assays since the model assumes normality per
 default. We can also use Poisson or Bernoulli distributions among others.
 
 Note that duplicates, such as "uncultured", might appear when aggregating the microbiome data by a taxonomic rank. To check for duplicates, run `any(duplicated(rownames(mae[[1]])))`. If it returns `TRUE`, then the
-duplicates are present. We can add `rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]], make_unique=TRUE)` to remove them.
+duplicates are present. We can add `rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]], make.unique=TRUE)` to remove them.
 
 ```{r, message=FALSE, warning=FALSE, eval = FALSE}
 library(MOFA2)
