--- a/inst/pages/24_biclustering.Rmd
+++ b/inst/pages/24_biclustering.Rmd
@@ -105,7 +105,7 @@ Boxplot is commonly used to summarize the results:
 library(ggplot2)
 library(patchwork)
 # ggplot librarys data in melted format
-melt_assay <- meltSE(mae[[1]], assay.type = "rclr", add_col_data = T, add_row_data = T)
+melt_assay <- meltSE(mae[[1]], assay.type = "rclr", add.col = T, add.row = T)
 
 # patchwork two plots side-by-side
 p1 <- ggplot(melt_assay) +
@@ -136,7 +136,7 @@ corr <- getExperimentCrossCorrelation(mae, 1, 2,
                                       assay.type1 = "rclr", 
                                       assay.type2 = "nmr", 
                                       mode = "matrix", 
-                                      cor_threshold = 0.2)
+                                      cor.threshold = 0.2)
 
 ```
 
@@ -322,7 +322,7 @@ between taxa. _biclust_ is suitable for this.
 corr <- getExperimentCrossCorrelation(mae, 1, 1, 
                                       assay.type1 = "rclr", assay.type2 = "rclr", 
                                       mode = "matrix",
-                                      cor_threshold = 0.2, verbose = F, show_warning = F)
+                                      cor.threshold = 0.2, verbose = F, show_warning = F)
 
 # Find biclusters
 bc <- biclust(corr, method=BCPlaid(), fit.model = y ~ m,
