--- a/inst/pages/24_clustering.qmd
+++ b/inst/pages/24_clustering.qmd
@@ -63,7 +63,7 @@ altExp(tse, "hclust") <- runMDS(altExp(tse, "hclust"), assay.type = "relabundanc
               FUN = vegan::vegdist, method = "bray")
 
 # Plot the clusters
-plotReducedDim(altExp(tse, "hclust"), "MDS", colour_by = "clusters")
+plotReducedDim(altExp(tse, "hclust"), "MDS", colour.by = "clusters")
 ```
 
 ## Hierarchical clustering
@@ -424,7 +424,7 @@ library(patchwork)
 
 # ggplot requires data in melted format
 melt_assay <- meltSE(mae[[1]], assay.type = "rclr", 
-                        add_col_data = T, add_row_data = T)
+                        add.col = T, add.row = T)
 
 # patchwork two plots side-by-side
 p1 <- ggplot(melt_assay) +
