--- a/inst/pages/97_extra_materials.qmd
+++ b/inst/pages/97_extra_materials.qmd
@@ -639,7 +639,7 @@ under altExp.
 
 Tax_glom removes the taxa which have not been assigned to the level given in
 taxrank by default (NArm = TRUE).
-So we will add the onRankOnly = TRUE to mergeFeaturesByRank function which is
+So we will add the disable.taxonomy = TRUE to mergeFeaturesByRank function which is
 equivalent to the default behaviour of tax_glom.
 
 ```{r}
@@ -648,7 +648,7 @@ equivalent to the default behaviour of tax_glom.
 altExp(tse, "Family") <-
   mergeFeaturesByRank(tse,
                       rank = "Family",
-                      onRankOnly = TRUE, # Let's add the equivalent option to NArm =TRUE
+                      disable.taxonomy = TRUE, # Let's add the equivalent option to NArm =TRUE
                       agglomerateTree = FALSE)
 altExp(tse, "Family")
 ```
