--- a/inst/pages/add-comm-typing.Rmd
+++ b/inst/pages/add-comm-typing.Rmd
@@ -45,7 +45,7 @@ tse <- runMDS(tse, assay.type = "relabundance",
               FUN = vegan::vegdist, method = "bray")
 
 # Plot PCoA and color clusters
-plotReducedDim(tse, "MDS", colour_by = "clusters")
+plotReducedDim(tse, "MDS", colour.by = "clusters")
 ```
 
 ```{r data, message=FALSE, warning=FALSE}
@@ -92,7 +92,7 @@ ClustAndPlot <- function(x) {
                    MARGIN = "col", NNGraphParam(k = x))
     
     # Plot the results of the clustering as a color for each sample
-    plotUMAP(tse, colour_by = I(colData(tse)$clusters)) +
+    plotUMAP(tse, colour.by = I(colData(tse)$clusters)) +
     labs(title = paste0("k = ", x))
 }
 
@@ -150,7 +150,7 @@ rel_taxa <- getTop(tse, top = 8, assay.type = "counts")
 tse <- tse[is.element(rownames(tse), rel_taxa), ]
 
 # Visualise composition barplot, with samples order by "Firmicutes"
-plotAbundance(tse, rank = "Phylum", order_rank_by = "abund", order_sample_by = "Firmicutes")
+plotAbundance(tse, rank = "Phylum", order.row.by = "abund", order.col.by = "Firmicutes")
 ```
 
 ### Composition heatmap
@@ -315,11 +315,11 @@ CSTColorScale <- scale_colour_manual(name = "CST", values = CSTColors)
 CSTFillScale <- scale_fill_manual(name = "CST", values = CSTColors)
 
 # plot MDS with Bray-Curtis dimensions 1 and 2
-p1 <- scater::plotReducedDim(tse2, "MDS_BC", colour_by = "CST", point_alpha = 1, 
+p1 <- scater::plotReducedDim(tse2, "MDS_BC", colour.by = "CST", point.alpha = 1, 
                              percentVar = var[c(1, 2)]*100) + th + labs(title = "Ordination by Cluster") +
                              theme(plot.title = element_text(hjust = 0.5))
 # plot MDS with Bray-Curtis dimensions 3 and 4
-p2 <- scater::plotReducedDim(tse2, "MDS_BC", colour_by = "CST", point_alpha = 1, 
+p2 <- scater::plotReducedDim(tse2, "MDS_BC", colour.by = "CST", point.alpha = 1, 
                              ncomponents = c(3, 4), percentVar = var[c(1, 2, 3, 4)]*100) + th
 # show results
 (p1 + CSTColorScale) / (p2 + CSTColorScale)
@@ -330,7 +330,7 @@ And now nMDS.
 ```{r message = FALSE, warning = FALSE}
 tse2  <- runNMDS(tse2, FUN = vegan::vegdist, method = "bray", 
                 name = "NMDS_BC", assay.type = "counts", ncomponents = 20)
-scater::plotReducedDim(tse2, "NMDS_BC", colour_by = "CST", point_alpha = 1) + th + 
+scater::plotReducedDim(tse2, "NMDS_BC", colour.by = "CST", point.alpha = 1) + th + 
         labs(title = "NMDS Bray-Curtis by Cluster") +
         theme(plot.title = element_text(hjust = 0.5)) + CSTColorScale
 ```
