--- a/inst/pages/61_network_comparison.qmd
+++ b/inst/pages/61_network_comparison.qmd
@@ -69,7 +69,7 @@ Based on "Diet", the `tse` object is then split into two groups: One with mixed 
 
 ```{r split_data}
 table(tse$Diet)
-tse_list <- splitOn(tse, f = "Diet", use_names = TRUE, MARGIN = 2)
+tse_list <- splitOn(tse, f = "Diet", use.names = TRUE, MARGIN = 2)
 ```
 
 ## Network learning and analysis
