Fix some display bugs + dark mode

--- a/inst/index.qmd
+++ b/inst/index.qmd
@@ -37,7 +37,12 @@ intro <- tryCatch(
 ::: {layout-ncol=2}
 `r intro`
 
-![](assets/cover.png)
+<img src="assets/cover.png" align="middle" 
+  style="max-width:100%;
+	  border-style: solid;
+	  border-color: #037da1;
+	  border-radius: 5%;" />
+
 :::
 
 # Welcome {-}
