updated heatmap exercise

--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -1447,6 +1447,8 @@ Useful functions: scater::runMDS, runNMDS, transformAssay, ggplot, scater::plotR
 
 library(mia)
 library(miaViz)
+library(sechm)
+
 data("GlobalPatterns", package = "mia")
 tse <- GlobalPatterns
 ```
