--- a/inst/pages/30_differential_abundance.qmd
+++ b/inst/pages/30_differential_abundance.qmd
@@ -5,19 +5,20 @@ library(rebook)
 chapterPreamble()
 ```
 
-This section provides an introduction to Differential Abundance Analysis (DAA),
-which is used to identify differences in the abundances of individual taxa (at
-any taxonomic level) between two or more groups, such as treatment and control.
-Here, we demonstrate its implementation on [Tengeler2020](https://microbiome.github.io/mia/reference/Tengeler2020.html) data set.
+Differential Abundance Analysis (DAA) is a method used to identify
+differences in the abundances of individual taxa (at any taxonomic level) 
+between two or more groups, such as treatment versus control groups.
+Here, we demonstrate its implementation on [Tengeler2020]
+(https://microbiome.github.io/mia/reference/Tengeler2020.html) data set.
 
 The goal of DAA is to identify biomarkers of a certain phenotype or condition,
 and gain understanding of a complex system by looking at its isolated components.
-For example, the identification of a bacterial taxon that is differentially
+For example, the identification of a bacterial taxon that is more or less
 abundant between healthy patients and diseased patients can lead to important
-insights into the pathophysiology of the disease. In other words, differentially
-abundant taxa can be involved in the dynamics of the disease, which in turn helps
-understand the system as a whole. Despite its relevance in current research,
-the DAA approach has also been subject to debate [@Quinn2021].
+insights into the underlying mechanisms of the disease. In other words, 
+differentially abundant taxa can be involved in the dynamics of the 
+disease, which in turn helps understand the system as a whole. Despite its 
+relevance in current research, the DAA approach has also been subject to debate [@Quinn2021].
 
 ## Statistical challenges of microbiome data 
 
@@ -28,48 +29,64 @@ characterized by high variability, zero-inflation and compositionality.
 orders of magnitude from sample to sample. **Zero-inflation** means that
 typically more than 70% of the values are zeros, which could be due to either
 physical absence (structural zeros) or insufficient sampling effort (sampling
-zeros). **Compositionality** implies that a change in the absolute abundance of
+zeros). **Compositionality** means that a change in the absolute abundance of
 one taxon will lead to apparent variations in the relative abundances of other
 taxa in the same sample. If neglected, such properties may cause significant
 bias in the results of DAA. Therefore, several approaches have been developed to
 address the unique properties of microbiome data and provide statistically
-useful results.
+reliable results.
+
+#### Approaches to Handle Zero-Inflated Data :
 
 The first approach to target zero-inflated data consists of specialized models,
 such as **over-dispersed count models** and **zero-inflated mixture models**.
 DESeq2, edgeR and corncorb are based on over-dispersed count models, whereas
 metagenomeSeq, RAIDA, ZIBB and Omnibus implement zero-inflated mixture models to
 address zero-inflation. Typically, these models assume a negative binomial,
-beta-binomial or normal/log-normal distribution. Alternatively, **zero imputation**
-also represents a valid approach to deal with zero-inflated data. ALDEx2 and
+beta-binomial or normal/log-normal distribution. 
+
+Another approach to deal with zero-inflated data is **zero imputation**
+where zeross are replaced with estimated values. ALDEx2 and
 eBay apply a Bayesian model to impute the zeros when working with proportion
 data, accounting for sampling variability and sequencing depth variation. Other
 methods, such as MaAsLin2 and ANCOMBC impute the zeros with a pseudo-count strategy.
 
-Regarding the compositionality of microbiome data, several approaches have been
+#### Approaches to handle Compositional Data : 
+
+To address the compositionality of microbiome data, several approaches have been
 developed to perform **robust normalization** with methods specifically designed
-to reduce the bias found in compositional data. Some examples include trimmed
-mean of M-values (TMM) normalization used by edgeR, relative log expression (RLE)
-normalization used by DESeq2, cumulative sum scaling (CSS) normalization used
-by metagenomeSeq, centered log-ratio transformation (CLR) normalization used
-by ALDEx2 and geometric mean of pairwise ratios (GMPR) normalization used by
-Omnibus and Wrench normalization [@Kumar2018], which corrects the compositional
-bias by an empirical Bayes approach. Other methods to deal with compositional
-data entail reference taxa approach used by DACOMP and RAIDA, analyzing the
-pattern of pairwise log ratios as done by ANCOM and bias-correction applied by
-ANCOMBC.
+to reduce the bias found in compositional data. Some examples include :
+
+- *Trimmed mean of M-values (TMM)* normalization used by edgeR.
+
+- *Relative log expression (RLE)* normalization used by DESeq2. 
+
+- *Cumulative sum scaling (CSS)* normalization used by metagenomeSeq.
+
+- *Centered log-ratio transformation (CLR)* normalization used by ALDEx2.
+
+- *Geometric mean of pairwise ratios (GMPR)* normalization used by Omnibus 
+and Wrench normalization [@Kumar2018], which corrects the compositional bias
+by an empirical Bayes approach. 
+
+Other methods to deal with compositional data entail reference taxa approach 
+used by DACOMP and RAIDA, analyzing the pattern of pairwise log ratios as done 
+by ANCOM and bias-correction applied by ANCOMBC.
 
 We recommend to have a look at @Nearing2022. In this study, multiple DAA methods
 were applied to 38 different datasets and their results were compared to one
-another. Because each method follows a slightly different approach in terms of
-assumptions and normalization techniques, it was shown that results on the same
-dataset may differ substantially depending on the method. Recently, @Yang2022
-comprehensively evaluated DAA methods via a semi-parametric framework and 106
-real datasets. This study also concluded that different methods can produce
-contradictory results, creating the risk of cherry-picking the most favorable
-options for one’s own hypothesis. Therefore, it is highly recommended to perform
-DAA with multiple methods to determine whether the findings can be reproduced by
-different approaches. Built on the findings of @Calgaro2020, the *benchdamic* [@Calgaro2022] package could offer a valuable support in this regard. Through a comprehensive evaluation process, it serves both practitioners by comparing DA methods from existing literature, and method developers by providing an impartial tool to evaluate their new approaches in comparison to what is already available. For details, check its extensive [vignette](https://www.bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html).
+another. The study highlighted that different methods might yield varying results 
+due to differing assumptions and normalization techniques. Recently, @Yang2022 
+comprehensively evaluated DAA methods via a semi-parametric framework and 106 real 
+datasets, concluding that different methods can produce contradictory results, creating
+the risk of cherry-picking the most favorable options for one’s own hypothesis. Therefore,
+it is highly recommended to perform DAA with multiple methods to verify if the findings
+are consistent across different approaches.  Built on the findings of @Calgaro2020,
+the benchdamic [@Calgaro2022] package could offer a valuable support in this regard
+through a comprehensive evaluation process. It serves both practitioners by comparing
+DA methods from existing literature, and method developers by providing an impartial
+tool to evaluate their new approaches in comparison to what is already available. For
+more details, refer to its extensive [vignette](https://www.bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html).
 
 ## Using the tools
 
